--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       rel="stylesheet"
       src="//normalize-css.googlecode.com/svn/trunk/normalize.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" type=text/css />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
@@ -22,17 +22,22 @@
     <header>
       <nav>
         <h1>
-          <a aria-label="Home" tabindex="1" href="/">Restaurant Reviews</a>
+          <a aria-label="Home" tabindex="1" role="navigation" href="/"
+            >Restaurant Reviews</a
+          >
         </h1>
       </nav>
     </header>
 
     <main id="maincontent">
-      <section id="map-container"><div id="map"></div></section>
+      <section id="map-container">
+        <div id="map" aria-label="location" role="application"></div>
+      </section>
       <section>
         <div class="filter-options">
           <h2>Filter Results</h2>
-          <select role="tablist"
+          <select
+            role="tablist"
             tabindex="2"
             id="neighborhoods-select"
             name="neighborhoods"
